# tinywasm

./: Cargo.toml  README.md  flake.nix
crates/parser/: Cargo.toml  README.md
crates/parser/src/: lib.rs  module.rs
crates/tinywasm/: Cargo.toml
crates/tinywasm/src/: error.rs  exec.rs  func.rs  imports.rs  instance.rs  lib.rs  module.rs  reference.rs
crates/tinywasm/src/parser/: mod.rs  module.rs  visit.rs
crates/tinywasm/src/runtime/: mod.rs  value.rs
crates/tinywasm/src/runtime/interpreter/: macros.rs  mod.rs
crates/tinywasm/src/runtime/stack/: block_stack.rs  call_stack.rs  mod.rs  value_stack.rs
crates/tinywasm/src/store/: element.rs  function.rs  global.rs  memory.rs  mod.rs  table.rs
crates/tinywasm/src/types/: archive.rs  instructions.rs  mod.rs
crates/types/: Cargo.toml
crates/types/src/: archive.rs  instructions.rs  lib.rs  value.rs
reef_interpreter/: Cargo.toml
reef_interpreter/src/: lib.rs
reef_interpreter/src/parser/: error.rs  mod.rs
reef_interpreter/src/runtime/interpreter/: mod.rs
reef_interpreter/src/types/: mod.rs
reef_testing/: .gitignore  Cargo.toml  Makefile  c.wat
reef_testing/c/: Makefile  main.c
reef_testing/c_test/: Makefile  main.c
reef_testing/rust_test/: Cargo.toml
reef_testing/rust_test/src/: lib.rs
reef_testing/src/: main.rs
