[workspace]
members = ["crates/tinywasm", "reef_testing", "reef_testing/rust_test"]
# default-members=[".", "crates/tinywasm", "crates/types", "crates/parser"]
resolver = "2"

[profile.wasm]
opt-level = "s"
lto = "thin"
codegen-units = 1
panic = "abort"
inherits = "release"

[workspace.package]
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Henry Gressmann <mail@henrygressmann.de>"]
repository = "https://github.com/explodingcamera/tinywasm"
