[package]
name = "reef_interpreter"
version.workspace = true
description = "A tiny WebAssembly interpreter"
edition.workspace = true
license.workspace = true
readme = "../README.md"

# [lib]
# name = "reef_interpreter"
# path = "src/lib.rs"

[dependencies]
wasmparser = { version = "0.208", default-features = false, features = [
    "validate",
] }
libm = { version = "0.2", default-features = false }
rkyv = { version = "0.7.44", default-features = false, features = [
    "size_32",
    "validation",
] }
bytecheck = { version = "0.7" }

[dev-dependencies]
# wast = { version = "208.0" }
# eyre = { version = "0.6" }
# serde_json = { version = "1.0" }
# serde = { version = "1.0", features = ["derive"] }

[features]
default = ["std"]
std = ["wasmparser/std"]
nightly = []
