[package]
name = "wasm_test"
description = "Local testing"
edition = "2021"
version = "0.0.1"
authors = ["MikMuellerDev", "Konstantin Ebeling"]

[dependencies]
argh = { version = "0.1.12" }
color-eyre = "0.6.3"
log = { version = "0.4.21" }
reef_interpreter = { path = "../reef_interpreter" }
rkyv = { version = "0.7.44", default-features = false, features = [
    "size_32",
    "validation",
] }
