[package]
name = "tinywasm-parser"
version.workspace = true
description = "TinyWasm parser"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
wasmparser = { version = "0.208", default-features = false, features = [
    "validate",
] }
tinywasm-types = { version = "0.7.0", path = "../types", default-features = false }

[features]
default = []
std = ["tinywasm-types/std", "wasmparser/std"]
nightly = []
