[package]
name = "tinywasm"
version.workspace = true
description = "A tiny WebAssembly interpreter"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"

[lib]
name = "tinywasm"
path = "src/lib.rs"

[dependencies]
tinywasm-parser = { version = "0.7.0", path = "../parser", default-features = false, optional = true }
tinywasm-types = { version = "0.7.0", path = "../types", default-features = false }
libm = { version = "0.2", default-features = false }

[dev-dependencies]
wast = { version = "208.0" }
owo-colors = { version = "4.0" }
eyre = { version = "0.6" }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["std", "parser", "archive"]
std = ["tinywasm-parser?/std", "tinywasm-types/std"]
parser = ["tinywasm-parser"]
archive = ["tinywasm-types/archive"]
nightly = []
