[package]
name = "tinywasm-types"
version.workspace = true
description = "TinyWasm types"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rkyv = { version = "0.7", optional = true, default-features = false, features = [
    "size_32",
    "validation",
] }
bytecheck = { version = "0.7", optional = true }

[features]
default = ["archive"]
std = ["rkyv?/std"]
archive = ["dep:rkyv", "dep:bytecheck"]
